--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "karma start",
     "cover": "istanbul cover _mocha -- test/*.js",
     "prepare": "npm run travis",
-    "server": "node ./src/server.js"
+    "server": "nodemon ./src/server/server.js"
   },
   "repository": {
     "type": "git",
@@ -43,31 +43,34 @@
     "mocha": "^5.2.0",
     "puppeteer": "^1.10.0",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-cli": "^3.2.3"
   },
   "dependencies": {
     "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/plugin-transform-async-to-generator": "^7.3.4",
     "@babel/plugin-transform-runtime": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/runtime": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@fortawesome/fontawesome-free": "5.7.2",
     "assertion-error": "^1.1.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.1",
+    "express": "^4.16.4",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
     "handlebars": "^4.0.12",
     "handlebars-loader": "^1.7.0",
+    "hbs": "^4.0.3",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.4",
+    "nodemon": "^1.18.10",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack-dev-server": "^3.1.10",
-    "express": "^4.16.4"
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0"
   }
 }
