--- a/.babelrc
+++ b/.babelrc
@@ -11,8 +11,8 @@
     ]
   ],
   "plugins": [
-    "@babel/transform-runtime",
     "@babel/plugin-transform-async-to-generator",
-    "@babel/plugin-proposal-class-properties"
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-transform-runtime"
   ]
 }
