--- a/package.json
+++ b/package.json
@@ -66,11 +66,12 @@
     "hbs": "^4.0.3",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.4",
+    "mongoose": "^5.4.19",
     "nodemon": "^1.18.10",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
-    "webpack-dev-server": "^3.1.10",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0"
+    "webpack-dev-server": "^3.1.10"
   }
 }
