--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "assertion-error": "^1.1.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
+    "body-parser": "^1.18.3",
+    "formidable": "^1.2.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.1",
     "express": "^4.16.4",
